--- a/Aplicacion Desktop/ClinicaFrba/Helpers/BaseDatos.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/Helpers/BaseDatos.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConversionHelper.cs" />
+    <Compile Include="Conversiones.cs" />
     <Compile Include="DBHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
