Finalizando el abm afiliado, agregue el dar de baja, tengo que terminar de probarlo bien, falta lo de los familiares

--- a/Aplicacion Desktop/ClinicaFrba/ClinicaFrba/ClinicaFrba.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/ClinicaFrba/ClinicaFrba.csproj
@@ -185,6 +185,9 @@
     <EmbeddedResource Include="Abm Afiliado\frmAfiliado.resx">
       <DependentUpon>frmAfiliado.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Abm Afiliado\frmBajaAfiliado.resx">
+      <DependentUpon>frmBajaAfiliado.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Abm Afiliado\frmHistorialModificaciones.resx">
       <DependentUpon>frmHistorialModificaciones.cs</DependentUpon>
     </EmbeddedResource>
