--- a/Aplicacion Desktop/ClinicaFrba/ClinicaFrba/ClinicaFrba.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/ClinicaFrba/ClinicaFrba.csproj
@@ -164,7 +164,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registro Agenda\RegistroAgenda.cs" />
+    <Compile Include="Registro Agenda\RegistroAgenda.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Registro Agenda\RegistroAgenda.Designer.cs">
       <DependentUpon>RegistroAgenda.cs</DependentUpon>
     </Compile>
