--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Aplicacion Desktop/ClinicaFrba/ClinicaFrba/obj/Debug/ClinicaFrba.csprojResolveAs
 Aplicacion Desktop/ClinicaFrba/Clases/bin/Debug/Clases.pdb
 *.pdb
 Aplicacion Desktop/ClinicaFrba/Clases/obj/Debug/Clases.dll
+
+Aplicacion Desktop/ClinicaFrba/ClinicaFrba/obj/
+Aplicacion Desktop/ClinicaFrba/Helpers/obj/
