Listados: 3 de 5 -> faltan 2 y 3

--- a/Aplicacion Desktop/ClinicaFrba/Clases/Clases.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/Clases/Clases.csproj
@@ -42,6 +42,11 @@
     <Compile Include="Afiliados\Afiliado.cs" />
     <Compile Include="Afiliados\ModifPlan.cs" />
     <Compile Include="Afiliados\Plan.cs" />
+    <Compile Include="Listados\Listado_1.cs" />
+    <Compile Include="Listados\Listado_2.cs" />
+    <Compile Include="Listados\Listado_3.cs" />
+    <Compile Include="Listados\Listado_4.cs" />
+    <Compile Include="Listados\Listado_5.cs" />
     <Compile Include="Profesionales\Agenda.cs" />
     <Compile Include="Profesionales\Especialidad.cs" />
     <Compile Include="Profesionales\Franja.cs" />
