--- a/Aplicacion Desktop/ClinicaFrba/Clases/Clases.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/Clases/Clases.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Profesionales\Especialidad.cs" />
     <Compile Include="Profesionales\Franja.cs" />
     <Compile Include="Profesionales\Profesional.cs" />
+    <Compile Include="Profesionales\turnosProcedure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turno.cs" />
     <Compile Include="Usuarios\Funcion.cs" />
