Casi terminado Cancelar turnos, me falta corregir algo cuando cancela el profesional e insertar en la tabla cancelaciones

--- a/Aplicacion Desktop/ClinicaFrba/Clases/Clases.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/Clases/Clases.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Listados\Listado_5.cs" />
     <Compile Include="Profesionales\Agenda.cs" />
     <Compile Include="Profesionales\Especialidad.cs" />
+    <Compile Include="Profesionales\Fecha.cs" />
     <Compile Include="Profesionales\Franja.cs" />
     <Compile Include="Profesionales\Profesional.cs" />
     <Compile Include="Profesionales\turnosProcedure.cs" />
