Corrijo creacion de agendas

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Aplicacion Desktop/ClinicaFrba/Clases/obj/Debug/Clases.dll
 
 Aplicacion Desktop/ClinicaFrba/ClinicaFrba/obj/
 Aplicacion Desktop/ClinicaFrba/Helpers/obj/
+
+Aplicacion Desktop/ClinicaFrba/ClinicaFrba/bin/Debug/debug.txt
