Tratando de verificar que no tenga mas de 48 hs por semana

--- a/Aplicacion Desktop/ClinicaFrba/Helpers/BaseDatos.csproj
+++ b/Aplicacion Desktop/ClinicaFrba/Helpers/BaseDatos.csproj
@@ -44,8 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigTime.cs" />
-    <Compile Include="Conversiones.cs" />
-    <Compile Include="DBHelper.cs" />
+    <Compile Include="ConversionesAObjetos.cs" />
+    <Compile Include="ConexionesDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
